--- a/everycheese/templates/cheeses/cheese_list.html
+++ b/everycheese/templates/cheeses/cheese_list.html
@@ -23,7 +23,7 @@
     <tr>
         <th><a href="/cheeses/colby/">Colby</a></th>
         <th>United States of America</th>
-        <th><a href="/delete/cheese">Delete</a></th>
+        <th><a href='/cheeses/colby/delete/'>Delete</a></th>
     </tr>
 
    </tbody>
@@ -33,7 +33,7 @@
     <tr>
         <th><a href="/cheeses/camembert/">Camembert</a></th>
         <th>France</th>
-        <th><a href="/cheeses/Delete/">Delete</a></th>
+        <th><a href="">Delete</a></th>
     </tr>
 
    </tbody>
